kubernetes/apps/monitoring-priv/alloy-collector/app/networkpolicy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: alloy-collector
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: alloy-collector
      app.kubernetes.io/name: alloy
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/instance: kube-prometheus-stack
      toPorts:
        - ports:
            - port: "12345"
              protocol: ANY
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
    - toEntities:
      - kube-apiserver
